--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link
+      href="https://unpkg.com/@sap-theming/theming-base-content/content/Base/baseLib/sap_horizon/css_variables.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://unpkg.com/fundamental-styles/dist/theming/sap_horizon.css"
+      rel="stylesheet"
+    />
 </head>
 <body>
   <app-root></app-root>
